cmake_minimum_required(VERSION 3.5)
project(video_test_all)
add_executable(${PROJECT_NAME} all.cpp)
add_executable(classifier classifier.cpp)
add_executable(converter converter.cpp)
add_executable(transcoder transcoder.cpp)
add_dependencies(${PROJECT_NAME} video)
target_link_libraries(${PROJECT_NAME} video boost_system boost_thread ssl crypto boost_coroutine)
target_link_libraries(classifier video)
target_link_libraries(converter video)
target_link_libraries(transcoder video)
target_compile_options(${PROJECT_NAME} PUBLIC "$<$<CXX_COMPILER_ID:MSVC>:-bigobj>")
add_test(video.test.all test_all)
install (TARGETS ${PROJECT_NAME} classifier converter transcoder DESTINATION . COMPONENT test)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/small.mp4 DESTINATION . COMPONENT test)
